--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,4 +1,14 @@
-<!--Scripts-->
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
+<!--Scripts-->
+<script text="javascript">
+//Add Função menu TOOGLE
+
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+
+</script>
