--- a/_includes/header-inicio.html
+++ b/_includes/header-inicio.html
@@ -8,6 +8,7 @@
             <a href="#" id="logomarca">
                 <img src="{{ site.baseurl }}/assets/img/logo-colossus.png" alt="Logomarca Colossus Framework" class="img-responsive colossus-animate" width="65" height="65">
             </a>
+            <button id="menu-toggle"  class="btn btn-primary">Menu</button>
         </div>
     </div>
 </header>
