--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,9 @@
 
   <body class="top">
         {% include header.html %}
-        {% include main.html %}
+          {{content}}
         {% include js.html %}
+        {% include footer.html %}
   </body>
 
 </html>
