--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
   <div class="cor-smed-500" id="topo-logo">
       <div class="container">
           <div class="row">
-             <a id="colossus"> Colossus Framework</a>
+             <h2 id="colossus">{{page.title}}</h2>
               <div class="logo col-md-3 col-md-offset-9 col-xs-6 col-xs-offset-1 col-sm-offset-3 col-sm-5">
                   <a href="" id="logomarca" target="_blank">
                       <img src="{{ site.baseurl }}/assets/img/marca-pms-nova.svg" alt="Logomarca Prefeitura" class="img-responsive">
