--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,14 +1,54 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="https://v4-alpha.getbootstrap.com/assets/js/vendor/tether.min.js"></script>
+<script src="{{site.baseurl}}/assets/js/clipboard.js"></script>
+<script src="{{site.baseurl}}/assets/js/highlight.pack.js"></script>
+<script src="{{site.baseurl}}/assets/js/bootstrap-v4.min.js"></script>
 <!--Scripts-->
+<script>hljs.initHighlightingOnLoad();</script>
+
 <script text="javascript">
 //Add Função menu TOOGLE
 
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
+        $("#wrapper").toggleClass("toggled", 5000);
+    });
+    
+    
+    $(".closebtn").click(function(e){
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled", 5000);
+    });
+    
+
+</script>
+<script text="javascript">
+ $(document).ready(function() {
+      $('pre code').each(function(i, block) {
+        hljs.highlightBlock(block);
+      });
     });
 
 </script>
+
+
+<!--clipboard -->
+<script text="javascript">
+
+// Clipboard
+
+new Clipboard('.btn', {
+    target: function(trigger) {
+        return trigger.nextElementSibling;
+    }
+});
+</script>
+
+
+                
+                  
+
+
