--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,17 +1,6 @@
 ---
-layout: default
+layout: default-inicio
 ---
 
 
-<article class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <div class="post-content">
-   <h1>oi</h1>
-    {{ content }}
-  </div>
-
-</article>
+{{content}}
