--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -1,7 +1,7 @@
 
 /******* GERAL*******/
 
-body{margin: 0;padding: 0;background-color:#FAFAFA;   height: 100%; width: 100%;   font-family: 'Roboto', sans-serif;}
+body{margin: 0;padding: 0;background-color:#fff;   height: 100%; width: 100%;   font-family: 'Roboto', sans-serif;}
 ul, ol{ list-style: none; padding:0; margin:0; }
 a{ cursor:pointer; text-decoration:none;}
 a:hover, a:focus{ text-decoration:none; }
@@ -34,7 +34,7 @@ a img{ border:none; }
 #background-colossus .divider{margin: 0 auto 30px;font-size: 20px;color: #fff;}
 .btn-outline-transparent{color: #fff; background-color: transparent; border-color: #fff;}
 .btn-outline-transparent:hover{background: #f5f5f5;}
-#conteudo{padding-bottom: 80px;}
+#conteudo{padding: 80px 0;}
 #conteudo h2{text-align: center; color: #333; margin-bottom: 5px;font-size: 35px;font-weight: 400; color: #333;}
 #conteudo p{max-width: 80%;margin:auto; font-size: 24px;}
 
@@ -45,13 +45,20 @@ a img{ border:none; }
 #menu a{padding-left: 10px;}
 #menu ul li a:hover{ background: transparent; color: #fff;}
 #menu .navbar-nav > li { width: 100%;}
-.sidenav {height: 100%; width: 0;position: fixed;z-index: 1;top: 0;left: 0;background-color: #FAFAFA;overflow-x: hidden;transition: 0.5s;padding-top: 60px;}
-.sidenav a {padding: 8px 8px 8px 32px;text-decoration: none;font-size: 25px;color: #fff; display: block;transition: 0.3s}
-.sidenav a:hover, .offcanvas a:focus{color: #f1f1f1;}
-.sidenav .closebtn {position: absolute;top: 0;right: 25px;font-size: 36px;margin-left: 50px;}
-#main {transition: margin-left .5s;padding: 16px;}
+.item-menu{ display: block; float: left; font-weight: 500; color: #fff; margin: 16px; font-size: 20px; border-radius: 4px; background: rgba(255,255,255,.08); padding: 3px 12px;}
+a.item-menu:hover, a.item-menu:active, a.item-menu:focus, a.item-menu:visited{ color: #fff; cursor: pointer; text-decoration: none;}
 
 
+/*******Contéudo***********/
+
+.demo{position: relative; padding: 20px ; border: solid #f7f7f9; border-width: .2rem;}
+.componentes{ padding: 20px 0 0; margin-right: 0; margin-left: 0; background-color: #f7f7f9;}
+.componentes pre{    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: transparent;
+    border: 0;
+}
 
 /********RODAPÉ*******/
 
