Revert "add nosvas estruturas"
This reverts commit 7c885fd54087a33c8dea056b2bb221545fa7f198.

--- a/_includes/css.html
+++ b/_includes/css.html
@@ -1,9 +1,8 @@
 <!--Css Custom-->
  
 <!-- syntax  CSS -->
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/github.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/font-awesome-4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/default-v4.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/font-awesome_v4.6.3/font-awesome.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/default.min.css">
 <!--<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">-->
 <link rel="stylesheet" href="{{ "/assets/css/simple-sidebar.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/assets/css/docs.css" | prepend: site.baseurl }}">
