--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,8 @@
 
   <body class="top">
         {% include header.html %}
-          {{content}}
+        {% include main.html %}
         {% include js.html %}
-        {% include footer.html %}
   </body>
 
 </html>
