--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,17 @@
 ---
-layout: default-inicio
+layout: default
 ---
 
 
-{{content}}
+<article class="post">
+
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+  </header>
+
+  <div class="post-content">
+   <h1>oi</h1>
+    {{ content }}
+  </div>
+
+</article>
