add nova estrutura dia

--- a/assets/css/colossus.v1.css
+++ b/assets/css/colossus.v1.css
@@ -14,7 +14,16 @@
 background-color: #4caf50;
 }
 
-.alert-info-colossus{
+.alert-warning-colossus{
 background-color: #ffeb3b;
 }
+
+.alert-info-colossus{
+background-color: #03a9f4;
+}
+
+.alert-danger-colossus{
+background-color: #f44336;
+}
+
 
