--- a/_includes/css.html
+++ b/_includes/css.html
@@ -9,5 +9,5 @@
 <link rel="stylesheet" href="{{ "/assets/css/docs.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/assets/css/colossus.v1.css" | prepend: site.baseurl }}">
 
-<!--Google Fonts-->
-<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <!-- Google Fonts-->
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700italic,700,900,900italic' rel='stylesheet' type='text/css'>
