--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,9 @@
 
 <footer id="rodape">
 <div class="container">
+       <ul class="nav navbar-nav">
+           <li><a href="{{/about}}">Sobre</a></li>
+       </ul>
         <div class="text-center">{{ site.title }} - © 2017 - <a href="http://www.educacao.salvador.ba.gov.br/" target="_blank">Secretaria Municipal da Educação</a></div> 
 </div>
 </footer>
