--- a/_includes/header-inicio.html
+++ b/_includes/header-inicio.html
@@ -1,12 +1,7 @@
 <!--Header inicio-->
-   <header class="superior-tema-colossus cor-smed-400 ">
+   <header class="superior-tema-colossus cor-smed-colossus">
     <div class="container">
-        <div class="row">
-            <a href="/" id="logomarca">
-                <img src="{{ site.baseurl }}/assets/img/logo-colossus.png" alt="Logomarca Colossus Framework" class="img-responsive colossus-animate" width="65" height="65">
-            </a>
-            <a href="#" id="menu-toggle" class="item-menu"><i class="fa fa-bars"></i> Menu</a>
-            <!--<button id="menu-toggle"  class="btn btn-primary">Menu</button>-->
-        </div>
+        <a href="#" id="menu-toggle" class="item-menu"><i class="fa fa-bars"></i> Menu</a>
+         <!--<button id="menu-toggle"  class="btn btn-primary">Menu</button>-->
     </div>
 </header>
