add novos arquivos e estruturas

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,12 @@
 
 
 <footer id="rodape">
-<div class="container">
-       <ul class="nav navbar-nav">
-           <li><a href="{{/about}}">Sobre</a></li>
-       </ul>
-        <div class="text-center">{{ site.title }} - © 2017 - <a href="http://www.educacao.salvador.ba.gov.br/" target="_blank">Secretaria Municipal da Educação</a></div> 
-</div>
+    <div class="container">
+           <ul class="nav-footer">
+               <li><a href="{{ site.baseurl }}/about">Sobre</a></li>
+           </ul>
+            <div class="text-left">
+                <p>{{ site.title }} - © 2017 - <a href="http://www.educacao.salvador.ba.gov.br/" target="_blank" style="color:#fff;" >Secretaria Municipal da Educação</a></p>
+            </div> 
+    </div>
 </footer>
