--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,9 @@
-<header class="superior-tema cor-smed-400">
-  <div class="container">
-      <div class="row">
-          <a href="http://www.salvador.ba.gov.br" target="_blank" id="nome-prefeitura">
-              <h1>Prefeitura Municipal de Salvador / Secretaria Municipal de Salvador</h1>
-          </a>
-      </div>
-  </div>
+
+<header class="superior-tema-colossus cor-smed-colossus">
+    <div class="container">
+        <a href="#" id="menu-toggle" class="item-menu"> Menu <i class="fa fa-bars"></i></a>
+         <!--<button id="menu-toggle"  class="btn btn-primary">Menu</button>-->
+    </div>
 </header>
-  <div class="cor-smed-500" id="topo-logo">
-      <div class="container">
-          <div class="row">
-             <h2 id="colossus">{{page.title}}</h2>
-              <div class="logo col-md-3 col-md-offset-9 col-xs-6 col-xs-offset-1 col-sm-offset-3 col-sm-5">
-                  <a href="" id="logomarca" target="_blank">
-                      <img src="{{ site.baseurl }}/assets/img/marca-pms-nova.svg" alt="Logomarca Prefeitura" class="img-responsive">
-                  </a>
-              </div>
-          </div>
-      </div>
-  </div>
 
   
