--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
         <ul class="sidebar-nav">
             <a href="javascript:void(0)" class="closebtn"><i class="fa fa-times" aria-hidden="true"></i></a>
             <li class="sidebar-brand">
-                <a href="/">{{site.title}}</a>
+               CSS
             </li>
             {% for page in site.pages %}
              <li>
