--- a/_includes/cabecalho.html
+++ b/_includes/cabecalho.html
@@ -1,7 +1,20 @@
 <!--Header inicio-->
-   <header class="superior-tema-colossus cor-smed-colossus">
+<header class="background-smed-colossus py-4">
     <div class="container">
-        <a href="#" id="menu-toggle" class="item-menu"><i class="fa fa-bars"></i> Menu</a>
-         <!--<button id="menu-toggle"  class="btn btn-primary">Menu</button>-->
+          <div class="row">
+               <div class="col-12 col-sm-12 col-xl-12 col-lg-12">
+                     <a id="logomarca-interna" href="{{ site.baseurl }}/">
+                        <img src="{{site.baseurl}}/assets/img/CF_Logo.svg" class="img-fluid" alt="Logomarca colossus" width="60" height="60">
+                   </a>
+                
+                    <a href="#" class="btn btn-outline-transparent" style="margin:10px 25px;">Download Colossus</a>
+                    
+                    <span class="version-colossus">currently version 1.0</span>
+                 
+                   <div id="menu-hamburguer">
+                        <a href="#" id="menu-toggle" class="item-menu">Menu <i class="fa fa-bars"></i> </a>
+                   </div>      
+               </div>
+          </div>
     </div>
 </header>
