--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,15 @@
 
-<header class="superior-tema-colossus cor-smed-colossus">
+  
+  <!--Header inicio-->
+<header id="superior-tema-colossus" class="background-smed-colossus">
     <div class="container">
-        <a href="#" id="menu-toggle" class="item-menu"> Menu <i class="fa fa-bars"></i></a>
-         <!--<button id="menu-toggle"  class="btn btn-primary">Menu</button>-->
+          <div class="row">
+               <div class="col-12 col-sm-12 col-xl-12 col-lg-12 " >
+                   <div id="menu-hamburguer">
+                        <a href="#" id="menu-toggle" class="item-menu"> Menu <i class="fa fa-bars"></i></a>
+                   </div>      
+               </div>
+          </div>
     </div>
 </header>
 
