--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,8 @@
-<div id="wrapper">
+
     <!-- Sidebar -->
-    <nav id="sidebar-wrapper">
+    <!--<nav id="sidebar-wrapper">
        
         <ul class="sidebar-nav">
-            <a href="javascript:void(0)" class="closebtn"><i class="fa fa-times" aria-hidden="true"></i></a>
             <li class="sidebar-brand">
                CSS
             </li>
@@ -13,6 +12,27 @@
             </li>
             {% endfor %}
         </ul>
+        
+    </nav>-->
+
+
+    <!-- Sidebar -->
+    <nav id="sidebar-wrapper">
+       
+        <ul class="sidebar-nav">
+            <li class="sidebar-brand">
+               CSS
+            </li>
+             <li>
+                <a href="{{base.url}}/alerts">Alerts</a>
+            </li>
+            <li>
+                <a href="{{base.url}}/buttons">Buttons</a>
+            </li>
+            <li>
+                <a href="{{base.url}}/forms">Forms</a>
+            </li>
+        </ul>
+        
     </nav>
-</div>
 
