--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,15 @@
 
 
   <body class="top">
-       {% include sidebar.html %}
+      <div id="wrapper">
+        {% include sidebar.html %}
         {% include header.html %}
-         <!--conteudo-->
-          {{content}}
-          <!--Fim contéudo-->
+             <!--conteudo-->
+              {{content}}
+              <!--Fim contéudo-->
         {% include js.html %}
-        {% include footer.html %}
+        {% include footer.html %}   
+      </div>
   </body>
 
 </html>
