--- a/assets/css/simple-sidebar.css
+++ b/assets/css/simple-sidebar.css
@@ -38,10 +38,10 @@
     margin-right: -250px;
     overflow-y: auto;
     background: #e5e5e5;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease;
     box-shadow: 0 1px 1px 1px rgba(0,0,0,0.3);
 }
 
@@ -65,7 +65,7 @@
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: 100%;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -81,7 +81,7 @@
     text-decoration: none;
     color: #333;
     font-weight: 300;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .sidebar-nav li a:hover {
@@ -96,9 +96,11 @@
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
+    height: 56px;
+    font-size: 24px;
+    line-height: 84px;
+    font-weight: 500;
+    color: #ababab;
 }
 
 .sidebar-nav > .sidebar-brand li a {
