--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,8 @@
 
 <footer id="rodape">
     <div class="container">
-           <ul class="nav-footer">
-               <li><a href="{{ site.baseurl }}/about">Sobre</a></li>
-           </ul>
-            <div class="text-left">
+           
+            <div class="text-center">
                 <p>{{ site.title }} - © 2017 - <a href="http://www.educacao.salvador.ba.gov.br/" target="_blank" style="color:#fff;" >Secretaria Municipal da Educação</a></p>
             </div> 
     </div>
