--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,13 @@
 
   
   <!--Header inicio-->
-<header id="superior-tema-colossus" class="background-smed-colossus">
+<header id="superior-tema-colossus" class="background-smed-colossus py-2">
     <div class="container">
-          <div class="row">
-               <div class="col-12 col-sm-12 col-xl-12 col-lg-12 " >
-                   <div id="menu-hamburguer">
-                        <a href="#" id="menu-toggle" class="item-menu"> Menu <i class="fa fa-bars"></i></a>
-                   </div>      
-               </div>
-          </div>
+           <div class="col-12 col-sm-12 col-xl-12 col-lg-12 " >
+               <div id="menu-hamburguer">
+                    <a href="#" id="menu-toggle" class="item-menu"> Menu <i class="fa fa-bars"></i></a>
+               </div>      
+           </div>
     </div>
 </header>
 
